<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.ithotl</groupId>
    <artifactId>PlayerStats</artifactId>
    <version>2.3</version>

    <name>PlayerStats</name>
    <description>Statistics Plugin</description>
    <url>https://www.spigotmc.org/resources/playerstats.102347/</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Artemis</name>
            <email>artemis.the.gr8@gmail.com</email>
            <url>https://github.com/Artemis-the-gr8</url>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/itHotL/PlayerStats/tree/main</url>
        <connection>scm:git:git://github.com/itHotL/PlayerStats.git</connection>
        <developerConnection>scm:git:git://github.com/itHotL/PlayerStats.git</developerConnection>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <repositories>
        <repository>
            <id>papermc-repo</id> <!-- Paper API -->
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>spigot-repo</id> <!-- Spigot API -->
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>sonatype-oss-snapshots1</id> <!-- the Adventure repository for development builds -->
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>

        <repository>
            <id>maven-central</id> <!-- Config-Updater -->
            <url>https://oss.sonatype.org/content/groups/public</url>
        </repository>

        <repository>
            <id>placeholderapi</id> <!-- Placeholder API -->
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.6</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.tchristofferson</groupId>
            <artifactId>ConfigUpdater</artifactId>
            <version>2.0-SNAPSHOT</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.0.2</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>24.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <transformers>
                        <transformer
                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>com.artemis.the.gr8.playerstats.core.Main</mainClass>
                        </transformer>
                    </transformers>
                    <artifactSet>
                        <excludes>
                            <exclude>org.jetbrains:annotations</exclude>
                        </excludes>
                    </artifactSet>
                    <relocations>
                        <relocation>
                            <pattern>com.tchristofferson</pattern>
                            <shadedPattern>com.artemis.the.gr8.playerstats.lib.tchristofferson</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.artemis.the.gr8.playerstats.lib.bstats</shadedPattern>
                        </relocation>
                    </relocations>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/versions/**</exclude>
                                <exclude>META-INF/maven/com.tchristofferson/**</exclude>
                                <exclude>images/**</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>net.kyori:*</artifact>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>com.tchristofferson:*</artifact>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                        <filter>
                            <artifact>org.bstats:*</artifact>
                            <excludes>
                                <exclude>META-INF/**</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>deploy</phase>  <!-- change to verify when deploying -->
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>deploy</phase>  <!-- change to verify when deploying -->
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <phase>deploy</phase>  <!-- change to verify when deploying -->
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <additionalOptions>-Xdoclint:none</additionalOptions>
                    <failOnError>false</failOnError>
                    <quiet>true</quiet>
                    <show>protected</show>
                    <groups>
                        <group>
                            <title>API</title>
                            <packages>com.artemis.the.gr8.playerstats.api</packages>
                        </group>
                    </groups>
                    <detectLinks>true</detectLinks>
                    <dependencyLinks>
                        <dependencyLink>
                            <groupId>org.spigotmc</groupId>
                            <artifactId>spigot-api</artifactId>
                            <url>https://hub.spigotmc.org/javadocs/bukkit/</url>
                        </dependencyLink>

                        <dependencyLink>
                            <groupId>net.kyori</groupId>
                            <artifactId>adventure-api</artifactId>
                            <url>https://jd.adventure.kyori.net/api/4.14.0/</url>
                        </dependencyLink>

                        <dependencyLink>
                            <groupId>net.kyori</groupId>
                            <artifactId>adventure-text-minimessage</artifactId>
                            <url>https://jd.adventure.kyori.net/text-minimessage/4.14.0/</url>
                        </dependencyLink>

                        <dependencyLink>
                            <groupId>net.kyori</groupId>
                            <artifactId>adventure-platform-bukkit</artifactId>
                            <url>https://jd.adventure.kyori.net/</url>
                        </dependencyLink>
                    </dependencyLinks>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>3.1.1</version>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>
</project>